# Windows-PDF-Tool

./: README.md  USER_MANUAL.md  build.spec  pyproject.toml  requirements.txt
src/: main.py
src/models/: document_state.py
src/services/: pdf_compress_service.py  pdf_edit_service.py  pdf_export_service.py  pdf_merge_service.py
src/ui/: main_window.py  pdf_canvas.py
src/ui/tools/: annotate_panel.py  compress_panel.py  export_panel.py  merge_panel.py  page_ops_panel.py
src/utils/: file_dialogs.py
